# Gomoku-AI

./: .gitignore  CMakeLists.txt  README.md  compile.py
include/: ai.hpp  board.hpp  boardgame.hpp  gomoku.hpp  pawn.hpp  player.hpp
src/: ai.cpp  board.cpp  boardgame.cpp  gomoku.cpp  main.cpp  pawn.cpp  player.cpp
